--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@
 __history/
 __recovery/
 *.~*
+Win32/
+Win32/Debug/
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
 *.stat
